[tool.poetry]
name = "bewise-second"
version = "0.1.0"
description = ""
authors = ["Ignatev Nikita <nikitaignatiev@gmail.com>"]
readme = "README.md"
packages = [{include = "bewise_second"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.95.2"
uvicorn = "^0.22.0"
sqlalchemy = "^2.0.14"
alembic = "^1.11.1"
python-dotenv = "^1.0.0"
asyncpg = "^0.27.0"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
pytest = "^7.3.1"
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
